--- a/src/app/components/read-all/read-all.component.html
+++ b/src/app/components/read-all/read-all.component.html
@@ -1,4 +1,10 @@
 <div class="container">
+    <div class="badge">
+        <button mat-stroked-button color="primary" matBadge="{{closed}}" (click)="navegarParaFinalizados()">
+            Tasks finalizadas
+        </button>
+    </div>
+
     <button class="novo-todo mat-elevation-z8" mat-stroked-button color="primary">
         NOVO
     </button>
@@ -12,17 +18,16 @@
             </mat-card-header>
 
             <div class="actions">
-                <button mat-mini-fab color="primary">
+                <button (click)="finalizar(item)" mat-mini-fab color="primary">
                     <mat-icon>done</mat-icon>
                 </button>
                 <button mat-mini-fab color="accent">
                     <mat-icon>edit</mat-icon>
                 </button>
-                <button mat-mini-fab color="warn">
+                <button (click)="delete(item.id)" mat-mini-fab color="warn">
                     <mat-icon>delete</mat-icon>
                 </button>
-
             </div>
         </mat-card>
     </div>
-</div> 
+</div>
